src/_modals.scss
// Modals
.modal {
	align-items: center;
	bottom: 0;
	display: none;
	justify-content: center;
	left: 0;
	opacity: 0;
	overflow: hidden;
	padding: $layout-spacing;
	position: fixed;
	right: 0;
	top: 0;

	&:target,
	&.active {
		display: flex;
		opacity: 1;
		z-index: $zindex-4;

		.modal-overlay {
			background: rgba($dark-color, .75);
			bottom: 0;
			cursor: default;
			display: block;
			left: 0;
			position: absolute;
			right: 0;
			top: 0;
			outline: none;
		}

		.modal-container {
			animation: slide-down .2s ease 1;
			z-index: $zindex-0;
		}
	}

	&.modal-sm {
		.modal-container {
			max-width: $control-width-sm;
			padding: 0 $unit-2;
		}
	}

	&.modal-lg {
		.modal-overlay {
			background: $bg-color-light;
		}

		.modal-container {
			box-shadow: none;
			max-width: $control-width-lg;
		}
	}
}

.modal-container {
    $modal-padding: $unit-2;
	@include shadow-variant($shadow-far);
	background: $bg-color-light;
	border-radius: $border-radius;
	display: flex;
	flex-direction: column;
	max-height: 75vh;
	max-width: $control-width-md;
	padding: 0 $modal-padding;
	width: 100%;

	&.modal-fullheight {
		max-height: 100vh;
	}

	.modal-header {
		color: $dark-color;
		padding: $modal-padding;
	}

	.modal-body {
		overflow-y: auto;
		padding: $modal-padding;
		position: relative;
	}

	.modal-footer {
		padding: $modal-padding;
		text-align: right;

		.btn {
			margin-right: $layout-spacing;
		}
	}
}

